--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 author:
   name             : "Thomas C. Furfaro"
   avatar           : "profile.png"
-  bio              : "Tinkerer turned Engineer turned Scientist"
+  bio              : "Engineer turned Scientist"
   location         : "Italy"
-  employer         : "NATO Centre for Maritime Research and Experimentation"
+  employer         : "NATO CMRE"
   googlescholar    : "https://scholar.google.com/citations?&user=iA-xJXQAAAAJ"
   email            : tom@furfmon.com
   uri              :
@@ -102,7 +102,7 @@ author:
   orcid            : "http://orcid.org/0000-0002-0561-6053"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/1302605/t-furfaro"
+  stackoverflow    : "1302605/t-furfaro"
   steam            :
   tumblr           :
   twitter          : "realfurf"
@@ -170,18 +170,18 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
-    output: true
-    permalink: /:collection/:path/
+  #  teaching:
+  #    output: true
+  #    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+    #  portfolio:
+    #    output: true
+    #    permalink: /:collection/:path/
+    #  talks:
+    #    output: true
+    #    permalink: /:collection/:path/
 
 
 # Defaults
@@ -205,14 +205,14 @@ defaults:
       layout: single
       author_profile: true
   # _teaching
-  - scope:
-      path: ""
-      type: teaching
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
+  #  - scope:
+  #      path: ""
+  #      type: teaching
+  #    values:
+  #      layout: single
+  #      author_profile: true
+  #      share: true
+  #      comments: true
   # _publications
   - scope:
       path: ""
@@ -222,23 +222,23 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
-  # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
-      author_profile: true
-      share: true
+      #  # _portfolio
+      #  - scope:
+      #      path: ""
+      #      type: portfolio
+      #    values:
+      #      layout: single
+      #      author_profile: true
+      #      share: true
+      #      comment: true
+      #  # _talks
+      #  - scope:
+      #      path: ""
+      #      type: talks
+      #    values:
+      #      layout: talk
+      #      author_profile: true
+      #      share: true
 
 # Sass/SCSS
 sass:
@@ -250,11 +250,11 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Rome # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
